--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/minddy_test
 spring.datasource.username=minddy_dev
 spring.datasource.password=scvriae
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 #-----------------------------------------------SPRING CONFIG
 spring.main.allow-bean-definition-overriding=true
