OAuth2 basic setup (not tested) Implementing UserController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.main.allow-bean-definition-overriding=true
 
 #----------------------------------------------------SECURITY
 
-security.basic.enabled=false
+springdoc.enable-spring-security=false
 #keycloak.auth-server-url=http://localhost:8080
 #keycloak.realm=vbnk
 #keycloak.resource=vbnk-sys
@@ -28,8 +28,12 @@ security.basic.enabled=false
 #vbnk.international.code= ES51
 #vbnk.entity.code=1312
 #vbnk.entity.name=vBNK.sys
+minddy.auth.google-id=err
+minddy.auth.google-secret=err
+minddy.auth.github-id=23f93839274a3cd8f7f6
+minddy.auth.github-secret=c050827a78364d479b7c9a5afb05482a78f78411
 
 
 #----------------------------------------------------------DOC
-#springdoc.api-docs.path=/docs/api
-#springdoc.swagger-ui.path=/docs/data/vbnk-data-service.html
+springdoc.api-docs.path=/docs/api
+springdoc.swagger-ui.path=/docs/minddy-data-service.html
