--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,12 @@ spring.application.name=minddy-data-service
 
 #------------------------------------------------DATA SOURCE
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/minddy_test
-spring.datasource.username=minddy_dev
-spring.datasource.password=scvriae
+#spring.datasource.url=jdbc:mysql://localhost:3306/minddy_test
+#spring.datasource.username=minddy_dev
+#spring.datasource.password=scvriae
+spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_minddy
+spring.datasource.username=freedb_minddyapp
+spring.datasource.password=*4gR4Z*58m#$XkT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
