--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,12 @@ spring.application.name=minddy-data-service
 
 #------------------------------------------------DATA SOURCE
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.url=jdbc:mysql://localhost:3306/minddy_test
-#spring.datasource.username=minddy_dev
-#spring.datasource.password=scvriae
-spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_minddy
-spring.datasource.username=freedb_minddyapp
-spring.datasource.password=*4gR4Z*58m#$XkT
+spring.datasource.url=jdbc:mysql://localhost:3306/minddy_test
+spring.datasource.username=minddy_dev
+spring.datasource.password=scvriae
+#spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_minddy
+#spring.datasource.username=freedb_minddyapp
+#spring.datasource.password=*4gR4Z*58m#$XkT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
@@ -31,8 +31,8 @@ springdoc.enable-spring-security=false
 #vbnk.international.code= ES51
 #vbnk.entity.code=1312
 #vbnk.entity.name=vBNK.sys
-minddy.auth.google-id=err
-minddy.auth.google-secret=err
+minddy.auth.google-id=not_set
+minddy.auth.google-secret=not_set
 minddy.auth.github-id=23f93839274a3cd8f7f6
 minddy.auth.github-secret=c050827a78364d479b7c9a5afb05482a78f78411
 
