Service Layer implemented

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,13 +18,15 @@ spring.main.allow-bean-definition-overriding=true
 #----------------------------------------------------SECURITY
 
 springdoc.enable-spring-security=false
-#keycloak.auth-server-url=http://localhost:8080
-#keycloak.realm=vbnk
-#keycloak.resource=vbnk-sys
-#keycloak.public-client=true
-#keycloak.principal-attribute=preferred_username
-#keycloak.use-resource-role-mappings=true
-#keycloak.bearer-only=true
+
+keycloak.credentials.secret=nv3w9nAaprXKFsASeF5pQjDGnDXxgG8X
+keycloak.auth-server-url=http://localhost:8080
+keycloak.realm=minddy
+keycloak.resource=minddy-api
+keycloak.public-client=true
+keycloak.principal-attribute=preferred_username
+keycloak.use-resource-role-mappings=true
+keycloak.bearer-only=true
 
 
 #---------------------------------------------------SELF
@@ -33,10 +35,10 @@ springdoc.enable-spring-security=false
 #vbnk.entity.name=vBNK.sys
 minddy.auth.google-id=not_set
 minddy.auth.google-secret=not_set
-minddy.auth.github-id=23f93839274a3cd8f7f6
-minddy.auth.github-secret=c050827a78364d479b7c9a5afb05482a78f78411
+minddy.auth.github-id=d6ce92d21935a5b7ef53
+minddy.auth.github-secret= 1967b97dbf09a02a28a5c869ef95658df3328b20 
 
 
 #----------------------------------------------------------DOC
-springdoc.api-docs.path=/docs/api
-springdoc.swagger-ui.path=/docs/minddy-data-service.html
+springdoc.api-docs.path=/v1/docs/api
+springdoc.swagger-ui.path=/v1/docs/minddy-data-service.html
