Refactored ProjectStructure as Node Tree

--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
             <version>5.2</version>
         </dependency>
     </dependencies>
+    <distributionManagement>
+        <repository>
+            <id>github</id>
+            <name>GitHub Packages</name>
+            <url>https://maven.pkg.github.com/VladScv/Minddy</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
